--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
       padding: 0.5rem 1rem;
       gap: 0.5rem;
       overflow-x: auto;
+      white-space: nowrap;
       background: #fff;
       border-bottom: 1px solid #ccc;
     }
@@ -48,6 +49,7 @@
       font-size: 0.95rem;
       cursor: pointer;
       transition: background 0.3s;
+      flex-shrink: 0;
     }
     .page-tab:hover { background: #d2d6de; }
     .page-tab.active {
@@ -117,8 +119,6 @@
     <button id="toggleBtn" onclick="toggleAll()">マーカー ON/OFF</button>
     <button id="mmToggleBtn" onclick="toggleMarkMode()">MM: OFF</button>
     <button onclick="toggleReadOnly()" title="閲覧モード切替">👁️</button>
-
-    <!-- Word風スタイル機能 -->
     <select id="fontSizeSelect" onchange="document.execCommand('fontSize', false, this.value)">
       <option value="1">極小</option>
       <option value="2">小</option>
@@ -130,7 +130,6 @@
     </select>
     <button onclick="document.execCommand('bold')" title="太字"><b>B</b></button>
     <input type="color" onchange="document.execCommand('foreColor', false, this.value)" title="文字色を変更" />
-
     <button onclick="exportToFile()">出力</button>
     <input type="file" accept=".txt,.html,.json" onchange="importFromFile(event)">
     <input type="text" id="searchInput" placeholder="検索したい文字を入力" oninput="searchText()" />
